--- a/services-details-directions/services-details-corporate-1m-server.html
+++ b/services-details-directions/services-details-corporate-1m-server.html
@@ -135,98 +135,138 @@
                     <fieldset style="max-height: 250px">
                         <legend>Дисковое пространство: <span>(39.00 KGS за месяц за 10 ГиБ)</span></legend>
                         <div class="radios">
-                            <input type="radio" name="storage1mcorporate" id="80gb1mcorporate" checked>
-                            <label for="80gb1mcorporate">80 ГиБ</label>
+                            <input style="width: 100%" type="range" min="80" max="1000" step="10" value="50" class="range-slider">
+                            <div class="slider-output">80</div>
                         </div>
-                        <div class="radios">
-                            <input type="radio" name="storage1mcorporate" id="90gb1mcorporate">
-                            <label for="90gb1mcorporate">90 ГиБ</label>
-                        </div>
-                        <div class="radios">
-                            <input type="radio" name="storage1mcorporate" id="100gb1mcorporate">
-                            <label for="100gb1mcorporate">100 ГиБ</label>
-                        </div>
+
                     </fieldset>
                     <fieldset style="max-height: 350px">
                         <legend>Оперативная память: <span>(78.00 KGS за месяц за 512 МиБ)</span></legend>
                         <div class="radios">
-                            <input type="radio" name="ram1mcorporate" id="4096mb1mcorporate" checked>
-                            <label for="4096mb1mcorporate">4096 МиБ</label>
-                        </div>
-                        <div class="radios">
-                            <input type="radio" name="ram1mcorporate" id="4608mb1mcorporate">
-                            <label for="4608mb1mcorporate">4608 МиБ</label>
-                        </div>
-                        <div class="radios">
-                            <input type="radio" name="ram1mcorporate" id="5120mb1mcorporate">
-                            <label for="5120mb1mcorporate">5120 МиБ</label>
-                        </div>
-                        <div class="radios">
-                            <input type="radio" name="ram1mcorporate" id="5632mb1mcorporate">
-                            <label for="5632mb1mcorporate">5632 МиБ</label>
-                        </div>
-                        <div class="radios">
-                            <input type="radio" name="ram1mcorporate" id="6144mb1mcorporate">
-                            <label for="6144mb1mcorporate">6144 МиБ</label>
-                        </div>
-                        <div class="radios">
-                            <input type="radio" name="ram1mcorporate" id="6656mb1mcorporate">
-                            <label for="6656mb1mcorporate">6656 МиБ</label>
-                        </div>
-                        <div class="radios">
-                            <input type="radio" name="ram1mcorporate" id="7168mb1mcorporate">
-                            <label for="7168mb1mcorporate">7168 МиБ</label>
-                        </div>
-                        <div class="radios">
-                            <input type="radio" name="ram1mcorporate" id="7680mb1mcorporate">
-                            <label for="7680mb1mcorporate">7680 МиБ</label>
-                        </div>
-                        <div class="radios">
-                            <input type="radio" name="ram1mcorporate" id="8192mb1mcorporate">
-                            <label for="8192mb1mcorporate">8192 МиБ</label>
+                            <input style="width: 100%" type="range" min="4096" max="32768" step="512" value="4096" class="range-slider">
+                            <div class="slider-output">4096</div>
                         </div>
                     </fieldset>
-                    <fieldset style="max-height: 200px">
+                    <fieldset style="max-height: 440px">
                         <legend>Количество процессоров: <span>(156.00 KGS за месяц за 1 Шт.)</span></legend>
                         <div class="radios">
                             <input type="radio" name="cpu1mcorporate" id="4cpu1mcorporate" checked>
                             <label for="4cpu1mcorporate">4 Шт.</label>
                         </div>
+
                         <div class="radios">
                             <input type="radio" name="cpu1mcorporate" id="5cpu1mcorporate">
                             <label for="5cpu1mcorporate">5 Шт.</label>
                         </div>
+
                         <div class="radios">
                             <input type="radio" name="cpu1mcorporate" id="6cpu1mcorporate">
                             <label for="6cpu1mcorporate">6 Шт.</label>
                         </div>
+
+                        <div class="radios">
+                            <input type="radio" name="cpu1mcorporate" id="7cpu1mcorporate">
+                            <label for="7cpu1mcorporate">7 Шт.</label>
+                        </div>
+
+                        <div class="radios">
+                            <input type="radio" name="cpu1mcorporate" id="8cpu1mcorporate">
+                            <label for="8cpu1mcorporate">8 Шт.</label>
+                        </div>
+
+                        <div class="radios">
+                            <input type="radio" name="cpu1mcorporate" id="9cpu1mcorporate">
+                            <label for="9cpu1mcorporate">9 Шт.</label>
+                        </div>
+
+                        <div class="radios">
+                            <input type="radio" name="cpu1mcorporate" id="10cpu1mcorporate">
+                            <label for="10cpu1mcorporate">10 Шт.</label>
+                        </div>
+
+                        <div class="radios">
+                            <input type="radio" name="cpu1mcorporate" id="11cpu1mcorporate">
+                            <label for="11cpu1mcorporate">11 Шт.</label>
+                        </div>
+
+                        <div class="radios">
+                            <input type="radio" name="cpu1mcorporate" id="12cpu1mcorporate">
+                            <label for="12cpu1mcorporate">12 Шт.</label>
+                        </div>
+
+                        <div class="radios">
+                            <input type="radio" name="cpu1mcorporate" id="13cpu1mcorporate">
+                            <label for="13cpu1mcorporate">13 Шт.</label>
+                        </div>
+
+                        <div class="radios">
+                            <input type="radio" name="cpu1mcorporate" id="14cpu1mcorporate">
+                            <label for="14cpu1mcorporate">14 Шт.</label>
+                        </div>
+
+                        <div class="radios">
+                            <input type="radio" name="cpu1mcorporate" id="15cpu1mcorporate">
+                            <label for="15cpu1mcorporate">15 Шт.</label>
+                        </div>
+
+                        <div class="radios">
+                            <input type="radio" name="cpu1mcorporate" id="16cpu1mcorporate">
+                            <label for="16cpu1mcorporate">16 Шт.</label>
+                        </div>
+
                     </fieldset>
-                    <fieldset style="max-height: 200px">
+                    <fieldset style="max-height: 350px">
                         <legend>Публичные IPv4-адреса: <span>(312.00 KGS за месяц за 1 Шт.)</span></legend>
                         <div class="radios">
                             <input type="radio" name="ipv1mcorporate" id="1ipv1mcorporate" checked>
                             <label for="1ipv1mcorporate">1 Шт.</label>
                         </div>
+
                         <div class="radios">
                             <input type="radio" name="ipv1mcorporate" id="2ipv1mcorporate">
                             <label for="2ipv1mcorporate">2 Шт.</label>
                         </div>
+
                         <div class="radios">
                             <input type="radio" name="ipv1mcorporate" id="3ipv1mcorporate">
                             <label for="3ipv1mcorporate">3 Шт.</label>
                         </div>
+
                         <div class="radios">
                             <input type="radio" name="ipv1mcorporate" id="4ipv1mcorporate">
                             <label for="4ipv1mcorporate">4 Шт.</label>
                         </div>
+
                         <div class="radios">
                             <input type="radio" name="ipv1mcorporate" id="5ipv1mcorporate">
                             <label for="5ipv1mcorporate">5 Шт.</label>
                         </div>
+
                         <div class="radios">
                             <input type="radio" name="ipv1mcorporate" id="6ipv1mcorporate">
                             <label for="6ipv1mcorporate">6 Шт.</label>
                         </div>
+
+                        <div class="radios">
+                            <input type="radio" name="ipv1mcorporate" id="7ipv1mcorporate">
+                            <label for="7ipv1mcorporate">7 Шт.</label>
+                        </div>
+
+                        <div class="radios">
+                            <input type="radio" name="ipv1mcorporate" id="8ipv1mcorporate">
+                            <label for="8ipv1mcorporate">8 Шт.</label>
+                        </div>
+
+                        <div class="radios">
+                            <input type="radio" name="ipv1mcorporate" id="9ipv1mcorporate">
+                            <label for="9ipv1mcorporate">9 Шт.</label>
+                        </div>
+
+                        <div class="radios">
+                            <input type="radio" name="ipv1mcorporate" id="10ipv1mcorporate">
+                            <label for="10ipv1mcorporate">10 Шт.</label>
+                        </div>
+
                     </fieldset>
                     <fieldset style="max-height: 300px">
                         <legend>Расписание резервного копирования</legend>
@@ -240,19 +280,19 @@
                             <input type="radio" name="backup1mcorporate" id="everyday1mcorporate">
                             <label for="everyday1mcorporate">Ежедневно в 00:00</label>
                             <br>
-                            <span>600.00 KGS за месяц</span>
+                            <span>750.00 KGS за месяц</span>
                         </div>
                         <div class="radios">
                             <input type="radio" name="backup1mcorporate" id="everyweek1mcorporate">
                             <label for="everyweek1mcorporate">Еженедельно, каждый<br>понедельник в 03:00</label>
                             <br>
-                            <span>250.00 KGS за месяц</span>
+                            <span>300.00 KGS за месяц</span>
                         </div>
                         <div class="radios">
                             <input type="radio" name="backup1mcorporate" id="everymonth1mcorporate">
                             <label for="everymonth1mcorporate">Ежемесячно, каждый 1-й день в 06:00</label>
                             <br>
-                            <span>150.00 KGS за месяц</span>
+                            <span>200.00 KGS за месяц</span>
                         </div>
                     </fieldset>
                 </div>
@@ -346,6 +386,22 @@
 </script>
 <script src="../js/language.js"></script>
 <script src="../js/nav.js"></script>
+<script>
+    // Находим элементы на странице
+    // Находим все элементы с классом .range-slider
+    const rangeSliders = document.querySelectorAll('.range-slider');
+
+    // Перебираем все найденные элементы и добавляем обработчик события для каждого из них
+    rangeSliders.forEach(function (rangeSlider) {
+        const sliderOutput = rangeSlider.nextElementSibling; // Находим соответствующий элемент .slider-output
+
+        rangeSlider.addEventListener('input', function () {
+            // Обновляем текст элемента вывода
+            sliderOutput.textContent = this.value;
+        });
+    });
+
+</script>
 <script>
     const radios = document.querySelectorAll('input[type="radio"]');
     const selectedOptions = document.getElementById('selected-options');
