--- a/textolite/backup/23.09.27.09.39/projects.eng.html
+++ b/textolite/backup/23.09.27.09.39/projects.eng.html
@@ -50,17 +50,24 @@
       <h2>Проекты</h2>
       <div class="project-page-boxes">
         <div class="project-page-box">
-          <img src="images/project14.jpg" alt="">
-          <h4>АЗС Газпром Нефть Азии готовы к перебоям электричества</h4>
+          <img src="images/project15.jpg" alt="">
+          <h4>Строительство первого коммерческого ЦОДа в Бишкеке.</h4>
           <div class="project-page-text" style="font-weight: 300; color: #333">
-            <p class="project-page-text-p">«Генераторные установки для Газпром Нефть Азия»
-              Летом 2011 компания «NSP» выиграла конкурс, объявленный компанией «Газпром Нефть Аэро» на поставку генераторных установок для заправочных станций Кыргызстана. Цель данного проекта была направлена на обеспечение гарантированной и бесперебойной работы заправочных станций
-              Именно поэтому генераторы французского производителя SDMO , предложенные нашей компанией, были выбраны как наиболее соответствующие для достижения поставленной цели.
-              В течение весенних и летних месяцев была произведена инсталляция двадцати шести генераторных установок на заправочных станциях Чуйской, Иссык-кульской, Таласских областей, и г. Бишкек.
-              Двадцать три бензиновых генератора модели Technic 9000 ТЕ и Technic 15000 ТE были установлены на заправках Бишкека, Иссык-кульской и Таласской области. Данные установки имеют отличительные свойства, такие как автоматическое уменьшение оборотов после пяти минут холостого хода, что обеспечивает экономию топлива.
-              Дизельные генераторы Т22К мощностью в 22 КвА был установлен нашими специалистами в г.Ош, Т44К мощностью в 44 КвА – в с. Дмитровка Чуйкой области, J66K мощностью в 66 КвА – на ул. Объездной Чуйской области. Так же планируется установка генератора J110K мощностью в 110 КвА – в Суусамырском районе, и двух генераторов J66K мощностью в 66 КвА в г. Токмак и с. Гавриловка Чуйской области. Особенность дизельных генераторов SDMO состоит в наличии АВР, охлаждения жидкостью, подогрева картера, а так же шумоизолирующего кожуха.
-              Квалифицированные инженеры-энергетики нашей компании профессионально выполнили весь процесс подключения генераторов к электрическим сетям: начиная от подготовки площадки, включая проводку кабельного пути от генератора до распределительных сетей заправок и установку самого генератора, и заканчивая подсоединением АВР.
-              Успешное завершение данного проекта состоялось благодаря качественному сервису, а частности правильной подборке мощности и типа генератора в соответствии с техническими и производственными показателями заправочных станций, нашими специалистами. ОсОО «NSP» находится на пути активного развития в данной сфере. Зарекомендовав себя как надежного партнера, в дальнейшем мы надеемся на расширение деятельности компании в рамках различных проектов.</p>
+            <p class="project-page-text-p">Центр обработки данных (ЦОД), принадлежащий компании NSP, представляет собой высокотехнологичное и безопасное пространство, предназначенное для хранения и обработки данных, а также для обеспечения надежности и доступности информационных систем. Этот ЦОД обладает множеством важных систем и оборудования, которые обеспечивают его бесперебойную работу.Одной из ключевых систем является система контроля и управления доступом, которая обеспечивает ограниченный доступ к помещению только авторизованным лицам, обеспечивая таким образом безопасность и конфиденциальность данных.Системы обеспечения микроклимата и хладоснабжения поддерживают оптимальные условия окружающей среды для серверного оборудования, что позволяет предотвратить перегрев и повышает его надежность.Охранная сигнализация, подключенная к ПЦН МВД Кыргызской Республики, обеспечивает быструю реакцию на возможные инциденты безопасности, а система видеонаблюдения служит для наблюдения и регистрации событий в помещении ЦОД.Системы пожарной сигнализации и пожаротушения гарантируют быстрое обнаружение и тушение пожаров, что снижает риск повреждения оборудования и потери данных.Гарантированное электропитание и заземление обеспечивают бесперебойную работу ЦОД даже в случае сбоев в основной электросети и защищают от статических электрических разрядов.Также важно отметить, что наличие оборудования и оптоволоконных кабелей от пяти крупных ISP провайдеров делает ЦОД привлекательным местом для организаций как из Кыргызстана, так и из-за рубежа, что способствует разнообразию клиентов и сотрудничеству на мировом уровне. Этот ЦОД играет критическую роль в обеспечении безопасности и доступности данных для разных секторов экономики и международных компаний.</p>
+          </div>
+          <button class="show-more-button">Показать еще</button>
+        </div>
+        <div class="project-page-box">
+          <img src="images/project14.jpg" alt="">
+          <h4>Новый взгляд на погоду с решением PESSL Instruments и Siap+Micros</h4>
+          <div class="project-page-text" style="font-weight: 300; color: #333">
+            <p class="project-page-text-p">Самодостаточность в агро секторе является важным вопросом любого государства. Новые IT технологии в сфере наблюдения за погодными условиями, позволяют решать любые вызовы меняющихся условий. Компания NSP завершила и продолжает работу по проектам, финансируемые такими донорами как UNDP, FAO и Мировой Банк, по установке АМС. Целью данных проектов является модернизация метеостанций для использования данных в сельском хозяйстве Кыргызской Республики.
+
+              Компания NSP является сертифицированным партнером компании PESSL Instruments, разработчика и производителя продукции наблюдения за погодой. Проект в Суусамыр был выполнен согласно требований UNDP. Все необходимые документы - проект, схема и разрешения были разработаны компанией согласно тех условий заказчика. В проектной документации были учтены сложные условия высокогорья. Компания NSP использовала необходимые крепежные материалы собственного производства. Проект был выполнен в трудных условиях и успешно сдан донору по всем требованиям и условиям.
+
+              Проект FAO был направлен на установку и наладку новых АМС на новых территориях в Кара Балте и Ноокене. На АМС в Ноокене были установлены дополнительные датчики. Инженеры компании провели обучение местных фермеров пользованию станциями.
+
+              В настоящий момент компания NSP реализует проект Всемирного Банка по модернизации 37 АМС, оставшихся в наследство с советских времен. Проект включает поставку, установку и наладку АМС в единую гидрометеорологическую сеть. Проект создается для Кыргызгидромета и реализуется в консорциуме с Siap+Micros, лидера в производстве гидрометеорологического оборудования.</p>
           </div>
           <button class="show-more-button">Показать еще</button>
         </div>
@@ -187,26 +194,23 @@
   </div>
 </footer>
 <script>
-    document.querySelector(".btn-to-top").addEventListener('click', () => {
-        window.scrollTo({top: 0, behavior: 'smooth'});
-    })
+  document.querySelector(".btn-to-top").addEventListener('click', () => {
+    window.scrollTo({top: 0, behavior: 'smooth'});
+  })
 </script>
 <script>
-    document.addEventListener("DOMContentLoaded", function () {
-        const showMoreButtons = document.querySelectorAll(".show-more-button");
+  document.addEventListener("DOMContentLoaded", function () {
+    const showMoreButtons = document.querySelectorAll(".show-more-button");
 
-        showMoreButtons.forEach((button) => {
-            button.addEventListener("click", function () {
-                const projectBox = this.closest(".project-page-box");
-                const projectText = projectBox.querySelector(".project-page-text-p");
-
-                // projectText.style.maxHeight = "none";
-                // projectText.style.overflow = "visible";
-                this.style.display = "none";
-                projectText.className = "";
-            });
-        });
+    showMoreButtons.forEach((button) => {
+      button.addEventListener("click", function () {
+        const projectBox = this.closest(".project-page-box");
+        const projectText = projectBox.querySelector(".project-page-text-p");
+        this.style.display = "none";
+        projectText.className = "";
+      });
     });
+  });
 </script>
 
 <script src="js/language.js"></script>
