--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="header-sides">
             <div class="header-left">
               <ul class="header-links">
-                <li class="header-link"><a href="hosting.html">VPS/Хостинг</a></li>
+                <li class="header-link"><a href="">VPS/Хостинг</a></li>
                 <li class="header-link"><a href="services.html">Услуги</a></li>
                 <li class="header-link"><a href="events.html">События</a></li>
                 <li class="header-link"><a href="projects.html">Проекты</a></li>
@@ -179,6 +179,7 @@
         </div>
         <div class="slider-pagination"></div>
       </div>
+
     </section>
     <section class="coordinates">
       <div class="container">
@@ -226,6 +227,19 @@
       <p>Copyright © 2008-2021 ОсОО "NSP"</p>
     </div>
   </footer>
+  <script type="text/javascript" src="https://bill.nsp.kg:3002/js/index.js"></script>
+  <script type="text/javascript">
+    if (window.billChat) {
+      billChat.init({
+        project: 1,
+        lang: 'ru',
+        backgroundColor: '#99c21c',
+        borderColor: '#CCC',
+        baseUrl: 'https://bill.nsp.kg:3002/'
+      });
+    }
+  </script>
+
   <script src="js/language.js"></script>
   <script src="js/nav.js"></script>
   <script>
