--- a/textolite/backup/23.09.30.19.17/events.eng.html
+++ b/textolite/backup/23.09.30.19.17/events.eng.html
@@ -13,25 +13,25 @@
 <header class="header" id="header">
   <div class="container">
     <div class="header-row">
-      <a href="index.html" class="logo"><img src="images/logo.svg" alt=""></a>
+      <a href="index.eng.html" class="logo"><img src="images/logo.svg" alt=""></a>
       <nav class="main-nav nav-hidden" id="mainNav">
         <div class="header-sides">
           <div class="header-left">
             <ul class="header-links">
-              <li class="header-link"><a href="hosting.html">VPS/Хостинг</a></li>
-              <li class="header-link"><a href="services.html">Услуги</a></li>
-              <li class="header-link"><a href="events.html">События</a></li>
-              <li class="header-link"><a href="projects.html">Проекты</a></li>
-              <li class="header-link"><a href="contacts.html">Контакты</a></li>
+              <li class="header-link"><a href="hosting.eng.html">VPS/Hosting</a></li>
+              <li class="header-link"><a href="services.eng.html">Services</a></li>
+              <li class="header-link"><a href="events.eng.html">Events</a></li>
+              <li class="header-link"><a href="projects.eng.html">Projects</a></li>
+              <li class="header-link"><a href="contacts.eng.html">Contacts</a></li>
             </ul>
           </div>
           <div class="header-right">
-            <a href="coordinates.html" class="header-gps">Наши координаты</a>
+            <a href="coordinates.eng.html" class="header-gps">Our coordinates</a>
             <div class="header-language-dropdown">
-              <button class="current-language-btn ru" id="currentLanguageBtn">ru</button>
+              <button class="current-language-btn eng" id="currentLanguageBtn">eng</button>
               <ul class="language-list" id="languageList">
-                <li><a class="language-li ru" href="#">ru</a></li>
-                <li><a class="language-li eng" href="events.eng.html">eng</a></li>
+                <li><a class="language-li eng" href="#">eng</a></li>
+                <li><a class="language-li ru" href="events.html">ru</a></li>
                 <li><a class="language-li kg" href="events.kg.html">kg</a></li>
               </ul>
             </div>
