--- a/textolite/backup/23.09.30.19.21/events.kg.html
+++ b/textolite/backup/23.09.30.19.21/events.kg.html
@@ -13,26 +13,26 @@
 <header class="header" id="header">
   <div class="container">
     <div class="header-row">
-      <a href="index.html" class="logo"><img src="images/logo.svg" alt=""></a>
+      <a href="index.kg.html" class="logo"><img src="images/logo.svg" alt=""></a>
       <nav class="main-nav nav-hidden" id="mainNav">
         <div class="header-sides">
           <div class="header-left">
             <ul class="header-links">
-              <li class="header-link"><a href="hosting.html">VPS/Хостинг</a></li>
-              <li class="header-link"><a href="services.html">Услуги</a></li>
-              <li class="header-link"><a href="events.html">События</a></li>
-              <li class="header-link"><a href="projects.html">Проекты</a></li>
-              <li class="header-link"><a href="contacts.html">Контакты</a></li>
+              <li class="header-link"><a href="hosting.kg.html">VPS/Хостинг</a></li>
+              <li class="header-link"><a href="services.kg.html">Куралдар</a></li>
+              <li class="header-link"><a href="events.kg.html">Окуялар</a></li>
+              <li class="header-link"><a href="projects.kg.html">Долбоорлор</a></li>
+              <li class="header-link"><a href="contacts.kg.html">Байланыш</a></li>
             </ul>
           </div>
           <div class="header-right">
-            <a href="coordinates.html" class="header-gps">Наши координаты</a>
+            <a href="coordinates.kg.html" class="header-gps">Биздин координаттар</a>
             <div class="header-language-dropdown">
-              <button class="current-language-btn ru" id="currentLanguageBtn">ru</button>
+              <button class="current-language-btn kg" id="currentLanguageBtn">kg</button>
               <ul class="language-list" id="languageList">
-                <li><a class="language-li ru" href="#">ru</a></li>
+                <li><a class="language-li kg" href="#">kg</a></li>
+                <li><a class="language-li ru" href="events.html">ru</a></li>
                 <li><a class="language-li eng" href="events.eng.html">eng</a></li>
-                <li><a class="language-li kg" href="events.kg.html">kg</a></li>
               </ul>
             </div>
           </div>
@@ -43,7 +43,6 @@
     </div>
   </div>
 </header>
-
 <main>
   <div class="container">
     <section class="projects-page">
